@@ -1,3 +1,9 @@
+16/10/2024:
+	- Changes to how the requested width and height are handled by View class as well as how the resolution level
+	  is calculated. Fixes problems with fitting images into bounding boxes and now correctly selects appropriate
+	  resolution level in all cases. Fixes https://github.com/ruven/iipsrv/issues/273
+
+
 02/10/2024:
 	- Re-factoring of tile byte size check to work cleanly for both JPEG and WEBP and to avoid having to sometimes
 	  reallocate memory
